Added certificates to about page

--- a/src/data/projectsAndCerts.json
+++ b/src/data/projectsAndCerts.json
@@ -5,7 +5,8 @@
         "img": "/images/rebies-logo.png",
         "shortDescription": "A responsive website for a small bakery business that allows the owner to showcase her creations and reach new customers.",
         "longDescription": "This project is a custom-built website developed using vanilla HTML, CSS, and JavaScript for a small bakery business. It provides the owner a place to showcase all the different types of baked goods she creates, along with menu items with pricing. This is an outlet for her to reach new customers and is regularly maintained.",
-        "link": "https://rebies-bakery.com"
+        "link": "https://rebies-bakery.com",
+        "linkText": "visit site"
     },
     {
         "name": "NBA Stats",
@@ -13,7 +14,8 @@
         "img": "/images/nbastats-logo.png",
         "shortDescription": "A React-based app for exploring basketball stats, featuring individual pages for players and teams, along with detailed comparison views for both.",
         "longDescription": "This React project is a web app for exploring NBA player and team statistics. It features a searchable database of all teams and players, along with comparison pages for side-by-side stat analysis. I plan to continue expanding the app to include game stats, live scores, and more in-depth metrics for an even richer user experience. Currently in it's beta version, this is best viewed from a desktop with a Google Chrome browser. Mobile and further browser support will be coming in the future.",
-        "link": "https://nba-stats-dl8.pages.dev/"
+        "link": "https://nba-stats-dl8.pages.dev/",
+        "linkText": "visit site"
     },
     {
         "name": "Fuller Photography",
@@ -21,6 +23,25 @@
         "img": "/images/fullerphoto-logo.png",
         "shortDescription": "A responsive website built for a photographer to showcase her portfolio through organized image galleries and a contact form to connect with new clients.",
         "longDescription": "This project is a custom-built website developed using vanilla HTML, CSS, and JavaScript for a professional photographer looking to showcase their portfolio. The site features organized photo albums, each containing high-quality images that can be viewed in an interactive pop-out window for a more immersive browsing experience. In addition to the visual galleries, a functional contact form was included to make it easy for potential clients to get in touch directly through the site. The goal was to create a clean, user-friendly interface that highlights the photographer's work while also supporting client engagement.",
-        "link": "https://helayna-fuller-photography.pages.dev/"
+        "link": "https://helayna-fuller-photography.pages.dev/",
+        "linkText": "visit site"
+    },
+    {
+        "name": "Front-End Certificate",
+        "id": 4,
+        "img": "/images/meta-logo.png",
+        "shortDescription": "Completed Meta's Front-End Developer Certificate, learning HTML, CSS, JavaScript, React, Git, and UX/UI to build responsive, interactive websites. Gained hands-on experience through real projects and interview prep.",
+        "longDescription": "I earned Meta's Front-End Developer Professional Certificate, a 9-course program that builds core front-end skills for real-world web development. The curriculum covered HTML, CSS, JavaScript, React, version control with Git, and UX/UI principles. I learned to create responsive, interactive websites and gained hands-on experience through a capstone project. The program also included interview preparation and problem-solving strategies to support job preparation.",
+        "link": "/images/MetaFrontendDevCert.pdf",
+        "linkText": "view certificate"
+    },
+    {
+        "name": "React Certificate",
+        "id": 5,
+        "img": "/images/scrimba-logo.png",
+        "shortDescription": "I completed Scrimba's Professional React Developer Specialization to learn basic and advanced concepts in React and apply these skills in real-world projects.",
+        "longDescription": "I completed Scrimba's Professional React Developer Specialization, covering React fundamentals, state management, and advanced features for building responsive web apps. Through hands-on projects like apps and games, I sharpened my problem-solving skills and gained real-world experience. The course also included interview prep and coding challenges, testing my readiness for technical assessments and providing some real world expectations.",
+        "link": "/images/ScrimbaProfReactDevCert.pdf",
+        "linkText": "view certificate"
     }
 ]
