--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,9 +4,10 @@
         "id": 1,
         "type": "freelance",
         "img": "/images/xcl-screenshot.png",
-        "details": "Site built for a property management group in Orland Park, IL. Allows the property managers to show their locations and connect with current and future tenants.",
+        "details": "Website for XCL Management showcasing their office properties across Orland Park, IL, with easy navigation for current and future tenants to explore locations and connect.",
         "link": "xclmgt.com",
         "video": "/videos/xclmgt-demo.mp4",
+        "videoMobile": "/videos/xclmgt-demoMobile.mp4",
         "tools": ["HTML","CSS","Javascript","React.js","Cloudflare","Resend"]
     },
     {
@@ -14,9 +15,10 @@
         "id": 2,
         "type": "freelance",
         "img": "/images/rebies-screenshot.png",
-        "details": "Website for an independent bakery business. Space for the baker to show off their creations, while providing a menu and contact form for customers.",
+        "details": "Custom website for independent business Rebie's Bakery to display their creations, share the menu options, and connect with customers.",
         "link": "rebies-bakery.com",
         "video": "/videos/rebiesbakery-demo.mp4",
+        "videoMobile": "/videos/rebiesbakery-demoMobile.mp4",
         "tools": ["HTML","CSS","Javascript","React.js","Cloudflare","Resend"]
     },
     {
@@ -27,6 +29,7 @@
         "details": "A React website built for developers that takes a public git URL and visualizes all commits, branches, and details from the repo. Allows users to download commit details in their preferred data format.",
         "link": "git-repo-tracker.pages.dev",
         "video": "/videos/gitrepotracker-demo.mp4",
+        "videoMobile": "/videos/gitrepotracker-demo.mp4",
         "tools": ["HTML","CSS","Javascript","React.js","Cloudflare","Github API"]
     },
     {
@@ -34,9 +37,10 @@
         "id": 4,
         "type": "freelance",
         "img": "/images/hfphotos-screenshot.png",
-        "details": "A site for a freelance photographer to showcase their work and connect with future clients.",
+        "details": "Portfolio site for freelance photographer Helayna Fuller to showcase her work and connect with prospective clients.",
         "link": "helaynafullerphotography.com",
         "video": "/videos/hfphotos-demo.mp4",
+        "videoMobile": "/videos/hfphotos-demoMobile.mp4",
         "tools": ["HTML","CSS","Javascript","React.js","Cloudflare","Resend"]
     }
 ]
